# SEGURIA

./: .gitignore  README.md  pg-pv.yaml
.fseventsd/: 000000000f0084d5  000000000f0084d6  000000000fc9198f  000000000fca3cae  000000000fcb600d  000000000fcc82f9  000000000fcda590  000000000fcec815  000000000fcfeaac  000000000fd5caf1  fseventsd-uuid
data/: typescript
data/k8s/pv/postgres/init/: 001_schema.sql  001_schema.sql.bk  Dockerfile  arranque
data/normativa/: ABOUT.md  NORMATIVA.md  NOTICE.md
data/script/xml-downloader/: .coverage  .pre-commit-config.yaml  INSTALACION.md  LICENSE.md  OPTIMIZACIONES.md  Untitled.ipynb  boe_downloader_db.py  boe_downloader_eli-panel-descarga.py  boe_downloader_eli.py  boe_downloader_eli.py.backv1  boe_downloader_eli.py.bk  boe_downloader_eli.py.bk.v2  boe_downloader_eli.py.bk.v3  boe_downloader_eli.py.fastapi.bk  boe_downloader_http.py  boe_downloader_parsing.py  boe_downloader_pipeline.py  boe_downloader_web.py  main.py  pyproject.toml  test_boe_downloader_eli.py  xml-domloader.py  xml-downloader-v1.py  xml_shred_ingest.py
data/script/xml-downloader/.ipynb_checkpoints/: INSTALACION-checkpoint.md
data/script/xml-downloader/boe_store/index/: eli_index.json  eli_index_meta.json
data/script/xml-downloader/headers/: add_headers.py  check_headers.sh
