[project]
name = "xml-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.128.0",
    "ijson>=3.3.0",
    "lxml>=6.0.2",
    "polars>=1.36.1",
    "psutil>=7.2.1",
    "psycopg[binary]>=3.3.2",
    "pygments>=2.19.2",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
test = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "coverage>=7.13.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "hypothesis>=6.150.0",
    "locust>=2.43.0",
    "lxml-stubs",
    "mutmut>=3.4.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "testcontainers>=4.14.0",
    "types-aiofiles",
    "types-cachetools",
    "types-click",
    "types-colorama",
    "types-docutils",
    "types-jsonschema",
    "types-psutil",
    "types-pygments",
    "types-python-dateutil",
    "types-pytz",
    "types-pyyaml",
    "types-redis",
    "types-requests",
    "types-setuptools",
    "types-simplejson",
    "types-toml",
    "types-ujson",
    "types-urllib3",
    "types-xmltodict",
]

[dependency-groups]
test = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "coverage>=7.13.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "hypothesis>=6.150.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "testcontainers>=4.14.0",
    "uvicorn>=0.40.0",
]
